# BasicallyCitiesSkylines-3

./: .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run_backend.py  run_both.py  run_frontend.py  zadani_en.md
citysim/: __init__.py  factory.py  graph.py  importer.py  plugins.py  randomness.py  server.py  simulation.py  types.py
data/city/: default_city.json
data/scenarios/: traffic_collapse_concert.json
docs/: architecture.md  demo_scenario.md  design_choices.md
frontend/: index.html  main.js  package-lock.json  package.json  styles.css  vite.config.js
frontend/src/: api.ts  main.ts  minimap.ts  scene.ts  sparkline.ts  toast.ts  utils.ts
scripts/: generate_city.py
tests/: test_simulation.py
